# X4Companion

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  error.txt  tauri.conf.json
src-tauri/bindings/: ClusterCatalogItem.ts  DeployableInfo.ts  EngineBoost.ts  EngineFwdThrust.ts  EngineTravelDrive.ts  EquipmentCatalog.ts  FactionRep.ts  InventoryCatalogItem.ts  ModBonus.ts  ModuleCargoInfo.ts  NpcInfo.ts  ResearchEntry.ts  ResearchMaterial.ts  SectorsCatalog.ts  ShieldCatalogItem.ts  ShieldRecharge.ts  ShipCargo.ts  ShipCatalogItem.ts  ShipDrag.ts  ShipInfo.ts  ShipSoftware.ts  StationInfo.ts  ThrusterCatalogItem.ts  ThrusterThrust.ts  WareAmount.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: blueprints.json  factions.json  modules.json  wares.json
src-tauri/resources/catalog/: equipment.json  gates.json  highways.json  metadata.json  mod_recipes.json  mod_stats.json  research.json  sectors.json  stations.json
src-tauri/resources/ship_templates/large/: ship_arg_l_destroyer_01_a.xml  ship_arg_l_destroyer_01_b.xml  ship_arg_l_destroyer_02_a.xml  ship_arg_l_miner_liquid_01_a.xml  ship_arg_l_miner_liquid_01_b.xml  ship_arg_l_miner_solid_01_a.xml  ship_arg_l_miner_solid_01_b.xml  ship_arg_l_trans_container_01_a.xml  ship_arg_l_trans_container_01_b.xml  ship_arg_l_trans_container_02_a.xml  ship_arg_l_trans_container_02_b.xml  (+54 more)
src-tauri/src/: catalog.rs  database.rs  lib.rs  main.rs  parser.rs  ship_inject.rs  ship_inspect.rs  ship_xml.rs  station.rs  types.rs  writer.rs
(+279 files in other folders)
